--- a/A320.html
+++ b/A320.html
@@ -17,14 +17,14 @@
   <tr>
     <td>Greater Rockford</td>
     <td>Perth</td>
-    <td>Germany</td>
-    <td></td>
+    <td><a href="./chats/gr-perth.html">Chats</a></td>
+    <td><a href="./charts/gr-perth.html">Chats</a></td>
   </tr>
   <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
-    <td></td>
+    <td>Greater Rockford</td>
+    <td>Cyprus</td>
+    <td><a href="./chats/gr-cyprus.html">Chats</a></td>
+    <td><a href="./charts/gr-cyprus.html">Chats</a></td>
   </tr>
   <tr>
     <td>Ernst Handel</td>
