--- a/charts/gr-perth.html
+++ b/charts/gr-perth.html
@@ -1,2 +1,3 @@
 <img src="https://interstellar-tars.github.io/air-dingus/stores/IRFD-Ground-Chart.png">
 <img src="https://interstellar-tars.github.io/air-dingus/stores/IPPH-Ground-Chart.png">
+<a href="https://interstellar-tars.github.io/air-dingus/A320.html">Return to A320</a>
