--- a/A320.html
+++ b/A320.html
@@ -18,13 +18,13 @@
     <td>Greater Rockford</td>
     <td>Perth</td>
     <td><a href="./chats/gr-perth.html">Chats</a></td>
-    <td><a href="./charts/gr-perth.html">Chats</a></td>
+    <td><a href="./charts/gr-perth.html">Charts</a></td>
   </tr>
   <tr>
     <td>Greater Rockford</td>
     <td>Cyprus</td>
     <td><a href="./chats/gr-cyprus.html">Chats</a></td>
-    <td><a href="./charts/gr-cyprus.html">Chats</a></td>
+    <td><a href="./charts/gr-cyprus.html">Charts</a></td>
   </tr>
   <tr>
     <td>Ernst Handel</td>
@@ -51,6 +51,6 @@
     <td></td>
   </tr>
 </table>
-<a href="#">Return to Home</a>
+<a href="https://interstellar-tars.github.io/air-dingus/">Return to Home</a>
     </body>
 </html>
